--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,7 +19,7 @@
 }
 
 .space {
-  margin-top: 4rem;
+  margin-top: 4.5rem;
 }
 
 .buttonSearch {
@@ -42,7 +42,7 @@
 }
 
 .main {
-  margin: 10px;
+  padding: 10px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -50,9 +50,52 @@
   align-items: flex-center;
 }
 
+.content {
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  grid-gap: 5px;
+  width: 98%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.videoSinal {
+  grid-column-start: 1;
+  grid-column-end: 2;
+
+  grid-row-start: 2;
+  grid-row-end: 4;
+
+  width: 100%;
+  max-width: 40vh;
+}
+
+.imageRef {
+  width: 100%;
+  max-width: 40vh;
+  margin: 0 auto;
+  grid-column-start: 2;
+  grid-column-end: 3;
+
+  grid-row: 2;
+
+}
+
+.descPalavra {
+  grid-column-start: 2;
+  grid-column-end: 3;
+
+  grid-row: 3;
+  padding: 10px;
+}
 
 .main h4 {
   margin: 5px;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 3;
+
+  grid-row: 1;
 }
 
 .footer {
